--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { git = "https://github.com/practicalrs/bevy", branch = "main" }
+bevy = { git = "https://github.com/practicalrs/bevy", branch = "opt_deps" }
 
 [profile.dev]
 debug = 0
